Added sample badly configured command filter which previously failed because of an improper format string.

--- a/Src/IntegrationPackage/IntegrationPackage.2012.csproj
+++ b/Src/IntegrationPackage/IntegrationPackage.2012.csproj
@@ -118,6 +118,7 @@
     <Compile Include="Adornment.cs" />
     <Compile Include="BuildCommandInterceptor.cs" />
     <Compile Include="Constants.cs" />
+    <Compile Include="BadCommandFilter.cs" />
     <Compile Include="FooOptionsPage.cs">
       <SubType>Component</SubType>
     </Compile>
