--- a/Src/Clide/Clide.nuspec
+++ b/Src/Clide/Clide.nuspec
@@ -11,7 +11,14 @@
         <iconUrl>http://clarius.io/clide-48x48</iconUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>High-level, composable and testable APIs for working with Visual Studio.</description>
-        <releaseNotes>v1.2
+        <releaseNotes>v1.3
+
+* Expose CompositionContainer directly on IDevEnv. This simplifies many scenarios where you want to interact with the container. Users can still import ICompositionService.
+* Added support for intercepting arbitrary commands in the IDE via simple exports of ICommandInterceptor components, automatically registered when the host is initialized. 
+* Moved MEF tracing/diagnostics to run on a separate background thread. This makes host initialization much faster.
+
+v1.2
+
 * Refactored for easier reuse by offering two static entry points: 
      - DevEnv.Get: gets the IDevEnv entry point API. This can be 
        used from anywhere you can import an IServiceProvider. By 
@@ -23,6 +30,7 @@
   you use Clide (you may because of other dependencies, like VSMSDK).
 
 v1.1
+
 * ISolutionExplorer API, with full solution traversal, behaviors
   for selecting, expanding and collapsing nodes, etc.
 * Integration with Adapter pattern for pluggable conversion of 
@@ -31,10 +39,10 @@ v1.1
 * Improved reporting of composition errors in the Clide output window
 
 v1.0
+
 * Full support for MEF-exported commands (ICommandExtension) and command filters
 * ToolWindow support
-* Tools options pages support
-</releaseNotes>
+* Tools options pages support</releaseNotes>
         <copyright>Copyright 2012</copyright>
         <tags>visualstudio vsx extensibility</tags>
         <dependencies />
