Moved service locator one level up since it's generally useful. Removed package-level initialization since that would cause problems if more than one package uses the same version of Clide.

--- a/Src/Clide/Clide.csproj
+++ b/Src/Clide/Clide.csproj
@@ -233,7 +233,7 @@
     <Compile Include="Solution\Implementation\GlobalProjectProperties.cs" />
     <Compile Include="Solution\ISolutionExplorerNode.cs" />
     <Compile Include="Solution\IProjectConfiguration.cs" />
-    <Compile Include="VisualStudio\ServiceLocator.cs" />
+    <Compile Include="ServiceLocator.cs" />
     <Compile Include="VisualStudio\VsHierarchyExtensions.cs" />
     <Compile Include="netfx\System\TypeInheritance.cs" />
     <Compile Include="netfx\System\TypeInheritanceExtension.cs" />
