Added settings to turn on MEF composition logging (it's now off by default). Added overload to Settings.cs and ISettingsManager.cs to force save default values (helps discovery of available settings).

--- a/Src/Clide/Clide.csproj
+++ b/Src/Clide/Clide.csproj
@@ -112,6 +112,7 @@
     <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClideSettings.cs" />
     <Compile Include="Commands\CommandInterceptorAttribute.cs" />
     <Compile Include="Commands\ICommandInterceptor.cs" />
     <Compile Include="Commands\ICommandInterceptorMetadata.cs" />
