--- a/Src/IntegrationPackage/IntegrationPackage.2012.csproj
+++ b/Src/IntegrationPackage/IntegrationPackage.2012.csproj
@@ -146,7 +146,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SampleCommand.cs" />
     <Compile Include="ShellComponent.cs" />
-    <Compile Include="ShellPackage.cs" />
+    <Compile Include="ClideIntegrationPackage.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources.resx">
