Added global ServiceLocator, added tests for global service retrieval, and fixed issue with ImportMany-style location.

--- a/Src/Clide/Clide.csproj
+++ b/Src/Clide/Clide.csproj
@@ -194,6 +194,7 @@
       <DependentUpon>Resources.tt</DependentUpon>
     </Compile>
     <Compile Include="Composition\ComponentAttribute.cs" />
+    <Compile Include="ServiceLocator.cs" />
     <Compile Include="Solution\Adapters\VsLangToSolutionAdapter.cs" />
     <Compile Include="Solution\Adapters\VsHierarchyItemToSolutionAdapter.cs" />
     <Compile Include="Solution\Adapters\VsToSolutionAdapter.cs" />
