Fixed improper registration via MEF of dependencies (enumerables) that should be resolved by Autofac. For [ImportMany] behavior, users will need to really specify that attribute on a property or field. Moved the adapter service initialization to the Adapters class itself, which will now pull adapters from the global DevEnv only.

--- a/Src/Clide/Clide.csproj
+++ b/Src/Clide/Clide.csproj
@@ -158,6 +158,7 @@
     <Compile Include="netfx\System\StringFormatWith.cs" />
     <Compile Include="netfx\System\Windows\Threading\DispatcherInvokeExtensions.cs" />
     <Compile Include="Patterns\AdapterAttribute.cs" />
+    <Compile Include="Patterns\Adapters.cs" />
     <Compile Include="Patterns\Adapter\Adapters.cs" />
     <Compile Include="Commands\CommandAttribute.cs" />
     <Compile Include="Commands\CommandFilterAttribute.cs" />
