--- a/Src/UnitTests/packages.config
+++ b/Src/UnitTests/packages.config
@@ -5,4 +5,5 @@
   <package id="Autofac.Extras.CommonServiceLocator" version="3.0.1" targetFramework="net40" />
   <package id="CommonServiceLocator" version="1.0" targetFramework="net40" />
   <package id="Moq" version="4.0.10827" targetFramework="net40" />
+  <package id="xunit" version="1.9.1" targetFramework="net40" />
 </packages>
