--- a/Src/Clide/Clide.nuspec
+++ b/Src/Clide/Clide.nuspec
@@ -3,7 +3,7 @@
     <metadata>
         <id>Clide</id>
         <version>1.1</version>
-        <title>Clide</title>
+        <title>Clide: An Enjoyable Visual Studio Automation API</title>
         <authors>Daniel Cazzulino</authors>
         <owners>Daniel Cazzulino</owners>
         <licenseUrl>http://clarius.io/clide-license</licenseUrl>
