--- a/Src/IntegrationTests/IntegrationTests.csproj
+++ b/Src/IntegrationTests/IntegrationTests.csproj
@@ -120,6 +120,7 @@
     <Compile Include="SettingsIntegrationSpec.cs" />
     <Compile Include="SettingsManagerSpec.cs" />
     <Compile Include="Solution\AdaptersSpec.cs" />
+    <Compile Include="Solution\ISolutionNodeExtensionsSpec.cs" />
     <Compile Include="Solution\ProjectNodeSpec.cs" />
     <Compile Include="Solution\IProjectNodeExtensionsSpec.cs" />
     <Compile Include="Solution\ItemDataSpec.cs" />
