--- a/Src/Clide/Clide.nuspec
+++ b/Src/Clide/Clide.nuspec
@@ -11,7 +11,17 @@
         <iconUrl>http://clarius.io/clide-48x48</iconUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>High-level, composable and testable APIs for working with Visual Studio.</description>
-        <releaseNotes>v2.0
+        <releaseNotes>v2.2
+
+* Added general-purpose referencing service
+
+v2.1
+
+* Added FindProjects extension method for ISolutionNode, which is more efficient than traversing the entire solution.
+* Improved support for side-by-side versioning of Clide assemblies deployed by multiple extensions
+
+v2.0
+
 * Reworked internals to avoid depending on VS-MEF extensibility, which is problematic and may 
   cause interference with VS composition.
 * Core DI now provided by Autofac, which gives us a performance boost in addition.
@@ -67,6 +77,11 @@ v1.0
 </releaseNotes>
         <copyright>Copyright 2012</copyright>
         <tags>visualstudio vsx extensibility</tags>
-        <dependencies />
+        <dependencies>
+            <dependency id="Autofac" version="3" />
+            <dependency id="Autofac.Extras.Attributed" version="3" />
+            <dependency id="Autofac.Extras.CommonServiceLocator" version="3" />
+            <dependency id="CommonServiceLocator" version="1" />
+        </dependencies>
     </metadata>
 </package>
