Created additional project for common cross-IDE implementations. Updated nuspec for each IDE. Refactored targets to reduce custom msbuild stuff per binding.

--- a/Src/Clide.Resolver/Clide.Resolver.csproj
+++ b/Src/Clide.Resolver/Clide.Resolver.csproj
@@ -21,7 +21,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\Clide\Properties\GlobalAssemblyInfo.cs">
+    <Compile Include="..\GlobalAssemblyInfo.cs">
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="LocalResolver.cs" />
