--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ Src/Clide/nuget/
 # Build Folders (you can keep bin if you'd like, to store dlls and pdbs)
 [Bb]in/
 [Oo]bj/
+nuget/
 
 # mstest test results
 TestResults
